fix logger z-index

--- a/assets/sass/logger.scss
+++ b/assets/sass/logger.scss
@@ -11,6 +11,7 @@
   border-radius: 10px;
   box-shadow: 0 0 5px rgba(30, 30, 30, 1);
   padding: 5px;
+  z-index: 200;
 }
 
 .none{
